--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,12 +35,15 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report
-          path: ./results/htmlreport.html
+          path: ./results
           retention-days: 30
-
-      - name: Publish Report
+          
+      - name: Deploy report to Github Pages
+        if: always()
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./results/
+          publish_branch: gh-pages
+          publish_dir: ./results
+
 
